--- a/templates/search.html
+++ b/templates/search.html
@@ -37,7 +37,7 @@
                 <ion-item href="#/app/shop/{{shop.id}}" ng-click="shopclick(shop);" ng-repeat="shop in shops ">
                     <div class="row">
                         <div class="col prename">{{shop.name}}</div>
-                        <div class="col"><span class="balanced amount">Rs.{{shop.sellbalance}}</span>
+                        <div class="col"><span class="balanced amount">{{shop.sellbalance}}</span>
                         </div>
                     </div>
                 </ion-item>
