--- a/templates/purchase.html
+++ b/templates/purchase.html
@@ -5,7 +5,7 @@
             <button class="button button-clear" ng-click="closeModalss()">Close</button>
         </div>
     </ion-header-bar>
-    <ion-content class="padding has-footer">
+    <ion-content class="padding">
         <div class="incard">
             <form >
                 <div class="list">
