--- a/templates/shop.html
+++ b/templates/shop.html
@@ -1,11 +1,16 @@
 <ion-view view-title="Shop">
-    <ion-content class="has-footer">
+
+    <ion-footer-bar class="footer-shop ion-item balanced" ng-click="callpurchase(profile);" ng-if="shopid!=userid">
+        <h4>Purchase</h4>
+    </ion-footer-bar>
+
+    <ion-content ng-class="{'has-footer' : shopid!=userid}" >
         <div class="incard card-shop">
             <ion-list class="lesshopadding product-cont">
                 <ion-item class="product">
                     <h2>{{profile.shopname}}</h2>
                     <div class="pull-right balanced amount">
-                       Rs.{{profile.salesbalance}}
+                        {{profile.salesbalance}}
                     </div>
 
                 </ion-item>
@@ -27,7 +32,7 @@
             </div>
             <div class="item item-input item-text-wrap">
                 <div class="input itemproducts">
-                   {{profile.address}}
+                    {{profile.address}}
                 </div>
             </div>
             <div class="item item-input item-text-wrap header">
@@ -47,7 +52,7 @@
             <ion-item class="item-left">
                 <h2>Landline No.</h2>
                 <div class="pull-right item-right">
-                     {{profile.shopcontact2}}
+                    {{profile.shopcontact2}}
                 </div>
             </ion-item>
 
@@ -64,11 +69,12 @@
                 </div>
             </ion-item>
             <div class="item item-input item-text-wrap header">
-                    <h2>Shops Photos</h2>
-                </div>
+                <h2>Shops Photos</h2>
+            </div>
             <div class="item item-input item-text-wrap itemimage">
                 <div class="input-div" ng-repeat="s in shoppic">
-                    <button class="button" ng-click="openpswd();"><img ng-src="{{s.photo|serverimage}}">
+                    <button class="button" ng-click="openpswd();">
+                        <img ng-src="{{s.photo|serverimage}}">
                     </button>
                 </div>
 
@@ -78,14 +84,12 @@
             </div>
             <div class="item item-input item-text-wrap itemimage">
                 <div class="input-div" ng-repeat="i in img">
-                    <button class="button" ng-click="openshops();"><img ng-src="{{i.photo|serverimage}}">
+                    <button class="button" ng-click="openshops();">
+                        <img ng-src="{{i.photo|serverimage}}">
                     </button>
                 </div>
 
             </div>
         </div>
     </ion-content>
-    <ion-footer-bar class="footer-shop ion-item balanced" ng-click="callpurchase(profile);" ng-if="shopid!=userid">
-        <h4>Purchase</h4>
-    </ion-footer-bar>
 </ion-view>
