--- a/templates/profile-edit.html
+++ b/templates/profile-edit.html
@@ -4,7 +4,7 @@
             <div class="incard">
                 <form ng-submit="">
                     <div class="list">
-                        <div class="profile-img">
+                        <div class="profile-img" ng-click="changeprofileimage()">
                             <img src="{{profile.shoplogo|serverimage}}">
                             <div class="holder">Edit</div>
                         </div>
