--- a/templates/profile-edit.html
+++ b/templates/profile-edit.html
@@ -52,8 +52,8 @@
                             <h2>Shops Photos</h2>
                         </div>
                         <div class="item item-input item-text-wrap itemproducts">
-                           <div class="input-div" ng-repeat="i in pic"  ng-click="changeshopimage(i.id);">
-                             
+                            <div class="input-div" ng-repeat="i in pic" ng-click="changeshopimage(i.id);">
+
                                 <div class="img-profile">
                                     <img ng-src="{{i.photo|serverimage}}">
                                 </div>
@@ -76,24 +76,20 @@
                                     <div class="holder2">Edit</div>
                                 </div>
                             </div>
-                            
+
 
                         </div>
                         <div class="item item-input item-text-wrap header">
                             <h2>Products Photos</h2>
                         </div>
                         <div class="item item-input item-text-wrap itemproducts">
-                           <div class="input-div" ng-repeat="i in image">
-                        <div class="img-profile">
-                            <img ng-src="{{i.photo|serverimage}}">
-                        </div>
-                    </div>
-                           <div class="input-div" ng-repeat="i in image" ng-click="changeproductimage(i.id);">
+                            
+                            <div class="input-div" ng-repeat="i in image" ng-click="changeproductimage(i.id);">
                                 <div class="img-profile">
                                     <img ng-src="{{i.photo|serverimage}}">
                                 </div>
                             </div>
-                            <div class="input-div" ng-if="image.length==0" ng-click="changeproductimage('');">
+                            <div class="input-div" ng-if="image.length==0" ng-click="changeproductimage(i.id);">
                                 <div class="img-profile">
                                     <img src="img/add.png">
                                     <div class="holder2">Edit</div>
