--- a/templates/profile-edit.html
+++ b/templates/profile-edit.html
@@ -89,7 +89,7 @@
                                     <img ng-src="{{i.photo|serverimage}}">
                                 </div>
                             </div>
-                            <div class="input-div" ng-if="image.length==0" ng-click="changeproductimage(i.id);">
+                            <div class="input-div" ng-if="image.length==0" ng-click="changeproductimage('');">
                                 <div class="img-profile">
                                     <img src="img/add.png">
                                     <div class="holder2">Edit</div>
