--- a/templates/profile.html
+++ b/templates/profile.html
@@ -69,7 +69,7 @@
                         {{profile.website}}
                     </div>
                 </ion-item>
-                <div class="item item-input item-text-wrap header">
+                <div class="item item-input item-text-wrap header" ng-if="pic.length>0">
                     <h2>Shops Photos</h2>
                 </div>
                 <div class="item item-input item-text-wrap itemproducts">
@@ -79,7 +79,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="item item-input item-text-wrap header">
+                <div class="item item-input item-text-wrap header" ng-if="image.length>0">
                     <h2>Products Photos</h2>
                 </div>
                 <div class="item item-input item-text-wrap itemproducts">
