--- a/templates/shop.html
+++ b/templates/shop.html
@@ -68,7 +68,7 @@
                     {{profile.website}}
                 </div>
             </ion-item>
-            <div class="item item-input item-text-wrap header">
+            <div class="item item-input item-text-wrap header" ng-if="shoppic.length>0">
                 <h2>Shops Photos</h2>
             </div>
             <div class="item item-input item-text-wrap itemimage">
@@ -79,7 +79,7 @@
                 </div>
 
             </div>
-            <div class="item item-input item-text-wrap header">
+            <div class="item item-input item-text-wrap header" ng-if="img.length>0">
                 <h2>  Products Photos</h2>
             </div>
             <div class="item item-input item-text-wrap itemimage">
