--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -2,7 +2,15 @@
     <ion-content class="padding">
         <div class="incard">
             <div class="prod-info">
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+<p>Barter is perhaps the words oldest system of trade. We all have heard and studied in school about how people used to barter for sustenance before the advent of money, the currency.</p>
+<p>One Stop Barter advocates the age old Barter system to be used by corporate /individual business for mutual win-win deals.</p>
+<p>One Stop Barter has built its impeccable reputation on solid financials, ethical and vigilant trading practices and creating barter system that’s designed to help its members thrive. One Stop Barter’s vast and growing network of active members sets One Stop Barter apart in an important way: Bartering is not a hit or miss proposition. You will find what you need when You need it—and you’ll find endless opportunities to market your own goods and services to new customers and untapped markets. </p>
+<p>With over 7 years of barter experience, One Stop Barter managers and principals have not only created one of world’s finest barter systems, but also cultivated the knowledge to understand and respect clients purchasing guidelines, means of distribution and windows of opportunity.</p>
+<p>A true focus on service, rock solid financial stability and a reputation for integrity and Transparency in all its dealings, have made One Stop Barter the #1 barter company for the best names in business. One Stop Barter members comprise all facets of industry, Print &#38; Television Media, FMCG, Hospitality, Real-estate, your neighborhood eatery, etc.   Smart businesses are growing more productive, efficient and successful with the power of barter.</p>
+<p>With One Stop Barter, barter becomes a smart part of your business strategy. You can improve your Cash-flow, profit picture and sales efficiency all through corporate barter. As your trading partner, One Stop Barter makes sure that you receive quality personal service to get you exactly what you need.</p>
+
+<p>As is the wont with many other industries, One Stop Barter too witnessed mushrooming of Barter companies after One Stop Barter started growing and the industry started accepting the Barter system. The competition however did not deter One Stop Barter and it went about its business in a methodical fashion becoming a pan – India enterprise.</p>
+<p>One Stop Barter realizes that companies have options in choosing a barter company partner. There are quite a few reasons why One Stop Barter has become the barter company of choice for blue chip brands and small companies across the country, but one word sums it up all: <b>Trust.</b></p>
             </div>
         </div>
     </ion-content>
