--- a/templates/profile.html
+++ b/templates/profile.html
@@ -11,13 +11,13 @@
             <div class="list profile-cont padtop5">
                 <ion-item class="item-left">
                     <h2>Area</h2>
-                    <div class="pull-right item-right">
+                    <div class="pull-right item-right text-capitalize">
                         {{profile.area}}
                     </div>
                 </ion-item>
                 <ion-item class="item-left">
                     <h2>Category</h2>
-                    <div class="pull-right item-right">
+                    <div class="pull-right item-right text-capitalize">
                         {{profile.category}}
                     </div>
                 </ion-item>
