--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,9 @@
 }
 .bg-xb {
     background-image: url('../img/login-bg.png');
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
     background-size: cover;
     background-repeat: no-repeat;
 }
@@ -83,6 +86,8 @@ button.btn-smalls {
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
     padding: 0 3px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
     border-radius: 5px;
 /*    min-height: 85px;*/
 }
@@ -280,6 +285,8 @@ div.ps-toolbar-play div.ps-toolbar-content {
 }
 .list.profile-cont .item button img {
     width: 100%;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
     border-radius: 5px;
     padding: 0 3px;
 }
@@ -330,9 +337,13 @@ p.info {
 }
 .incard {
     background: white;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
     border-radius: 3px;
     /* border: 1px solid #ddd; */
     overflow: hidden;
+    -webkit-box-shadow: 0 1px 1px 0 #aaa;
+    -moz-box-shadow: 0 1px 1px 0 #aaa;
     box-shadow: 0 1px 1px 0 #aaa;
     margin-bottom: 10px;
 }
@@ -362,6 +373,8 @@ ion-item.category.item h3 {
     background: #3185D7;
     color: white;
     padding: 5px 15px;
+    -webkit-border-radius: 15px;
+    -moz-border-radius: 15px;
     border-radius: 15px;
     margin-top: 0px;
 }
@@ -431,6 +444,8 @@ ion-footer-bar.footer-shop h4 {
 }
 .sell-img img {
     width: 100%;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
     border-radius: 3px;
 }
 .sell-cont {
@@ -482,6 +497,8 @@ ion-item.my-balcont.item {
 }
 .item.item-input.itemimage button img {
     width: 100%;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
     border-radius: 5px;
     padding: 0 3px;
 }
@@ -494,6 +511,8 @@ ion-item.my-balcont.item {
 }
 .round-circle {
     border: 2px solid #3185D7;
+    -webkit-border-radius: 100%;
+    -moz-border-radius: 100%;
     border-radius: 100%;
     height: 35px;
     width: 35px;
@@ -504,6 +523,8 @@ ion-item.my-balcont.item {
 }
 .rounds-x {
     border: 2px solid #dc3a29;
+    -webkit-border-radius: 100%;
+    -moz-border-radius: 100%;
     border-radius: 100%;
     background: #dc3a29;
 }
@@ -564,6 +585,8 @@ ion-item.item-left.item h2 {
     color: #fff;
 }
 .button-bar.transbtn .button {
+    -webkit-border-radius: 0px!important;
+    -moz-border-radius: 0px!important;
     border-radius: 0px!important;
     border-color: #1A1E24;
 }
@@ -597,13 +620,13 @@ ion-item.item.item-thumbnail-left.trns-add {
 }
 .backdrop {
     top: 44px;
-    background: #DEDFE1;
+    background: transparent;
 }
 .platform-ios.platform-cordova:not(.fullscreen) .backdrop {
     top: 64px;
 }
 .loading-container .loading {
-    background: transparent;
+    background: #DEDFE1;
 }
 .input-label.different {
     color: #111;
@@ -630,6 +653,8 @@ ion-item.item.item-thumbnail-left.trns-add {
     text-align: center;
     -webkit-transform: translateY(-50%);
     -ms-transform: translateY(-50%);
+    -moz-transform: translateY(-50%);
+    -o-transform: translateY(-50%);
     transform: translateY(-50%);
 }
 .row.nopad {
