--- a/templates/addbalance.html
+++ b/templates/addbalance.html
@@ -1,4 +1,4 @@
-<ion-modal-view>
+<ion-view view-title="Add Balance">
     <ion-header-bar class="bar-royal">
         <h1 class="title">Add Balance</h1>
         <div class="buttons">
@@ -7,7 +7,7 @@
     </ion-header-bar>
     <ion-content class="padding">
         <div class="incard">
-            <form ng-submit="doLogin()">
+            <form ng-submit="doLogin();">
                 <div class="list">
                     <label class="item item-input">
                         <span class="input-label">Amount in Barter:</span>
@@ -16,16 +16,19 @@
                     <label class="item item-input">
                         <span class="input-label">Amount in INR:</span>
                         <input type="text" ng-model="add.amountinr" ng-change="changeamount(add.amountinr);">
-<!-- <span>{{add.amount*percent/100|number:2}}   </span>    -->
-                      
-                        
+                        <!-- <span>{{add.amount*percent/100|number:2}}   </span>    -->
                     </label>
-                    
+
+                    <label class="item item-input">
+                        <span class="input-label">Reason:</span>
+                        <input type="text" ng-model="add.reason">
+                    </label>
+
                     <div class="padding-horizontal">
-                        <button class="button button-block button-balanced" type="submit" ng-click="addbalance(add.amount);">Add Balance</button>
+                        <button class="button button-block button-balanced" type="submit" ng-click="addbalance(add.amount,add.reason);">Add Balance</button>
                     </div>
                 </div>
             </form>
         </div>
     </ion-content>
-</ion-modal-view>
+</ion-view>
