--- a/templates/selling.html
+++ b/templates/selling.html
@@ -5,7 +5,7 @@
     <ion-content class="padding">
         <div class="incard" ng-repeat="r in req">
             <div class="list">
-                <ion-item class="item item-thumbnail-left">
+                <ion-item class="item item-thumbnail-left item-text-wrap">
                     <div class="row">
                         <div class="col-25">
                             <div class="sell-img">
