--- a/templates/profile-edit.html
+++ b/templates/profile-edit.html
@@ -16,7 +16,7 @@
                             <div class="input-label different">
                                 Area
                             </div>
-                            <select ng-model="a">
+                            <select ng-model="profile.area">
                                 <option ng-repeat="a in areas" value="{{a.id}}">{{a.name}}</option>
                             </select>
                         </div>
@@ -24,7 +24,7 @@
                             <div class="input-label different">
                                 Category
                             </div>
-                            <select ng-model="c">
+                            <select ng-model="profile.name">
                                 <option ng-repeat="c in cat" value="{{c.id}}">{{c.name}}</option>
                             </select>
                         </div>
