--- a/templates/purchase.html
+++ b/templates/purchase.html
@@ -18,14 +18,14 @@
                     </label>
                     <label class="item item-input">
                         <span class="input-label">Amount:</span>
-                        <input type="number" maxlength="10" ng-model="amount">
+                        <input type="number" maxlength="10" ng-model="send.amount">
                     </label>
                     <label class="item item-input">
                         <span class="input-label">Reason:</span>
-                        <input type="text" maxlength="200" ng-model="reason">
+                        <input type="text" maxlength="200" ng-model="send.reason">
                     </label>
                     <div class="padding-horizontal">
-                        <button class="button button-block button-balanced"  ng-click="sendamt(amount,reason);">Request</button>
+                        <button class="button button-block button-balanced"  ng-click="sendamt(send.amount,send.reason);">Request</button>
                     </div>
                 </div>
             </form>
