--- a/templates/transaction.html
+++ b/templates/transaction.html
@@ -30,6 +30,7 @@
                                         <h2>{{tr.shopname}}</h2>
                                         <p>Amount: {{tr.amount}}</p>
                                         <p>Date: {{tr.date}}</p>
+                                        <p>Time: {{tr.time}}</p>
                                     </div>
                                 </div>
                             </div>
@@ -56,6 +57,7 @@
                                         <h2>{{tr.shopname}}</h2>
                                         <p>Amount: {{tr.amount}}</p>
                                         <p>Date: {{tr.date}}</p>
+                                        <p>Time: {{tr.time}}</p>
                                     </div>
                                 </div>
                             </div>
